# iipa_backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
iipa_backend/: config.py  main.py
iipa_backend/config/: _prompts.py  config.py
iipa_backend/controllers/: prompt_controller.py  tactic_controller.py
iipa_backend/models/: prompt.py
iipa_backend/routes/: kb.py  tactics.py
iipa_backend/scripts/: str2json_val.py
iipa_backend/services/kb/: kb_service.py
iipa_backend/services/llama_index/: index_builder.py
iipa_backend/services/prompt/: autogen_codegen.py  config.py  llm_quest.py  prompt_service.py
iipa_backend/services/tactics/: tactic.py  tactics.py  tactics_service.py
iipa_backend/services/tactics/prompt_tactics/: assumptions_expansion.py  custom_prompt.py  empirical_verification.py  entailment_verification.py  premises_retrieval.py  prompt_tactic.py  proof.py  proof_in_context.py  statement_verification.py
iipa_backend/utils/: utils.py
