[tool.poetry]
name = "iipa-backend"
version = "0.1.0"
description = ""
authors = ["Simon Ljungbeck <simon.ljungbeck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.1"}
sqlalchemy = "^2.0.35"
asyncpg = "^0.29.0"
pydantic = "^2.9.2"
alembic = "^1.13.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
